@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; distributed under the GPL version 2
 # Copyright 2006-2008 Berkano Overlay; distributed under the GPL version 2
 
+*arora-0.8.0 (21 Jul 2009)
+
+  21 Jul 2009; Ben de Groot <yngwin@gentoo.org> +arora-0.8.0.ebuild:
+  Add newest release for testing. USE=doc and translations are untested yet.
+
   01 Jul 2009; Davide Pesavento <davidepesa@gmail.com> arora-9999.ebuild:
   No need to specify .pro file name.
 
